--- a/gionee/demo/lazyload/lazyload.html
+++ b/gionee/demo/lazyload/lazyload.html
@@ -18,6 +18,7 @@ img:before{ content:""; width:100%; height:100%; display:inline-block; position:
 </style>
 
 <div id="div1">
+	<img data-width="777" data-height="495" data-src="http://d.gionee.com/nav/lockimage/detailpage/20160706/3250/1467797823326086755.jpg" src="">
 	<img data-width="754" data-height="473" data-src="http://d.gionee.com/nav/lockimage/detailpage/20160706/3250/1467797807708002833.jpg" src="" >
     <img data-width="990" data-height="563" data-src="http://d.gionee.com/nav/lockimage/detailpage/20160706/3250/1466761484189.jpg" src="" >
 </div>
