--- a/gionee/demo/lazyload/lazyload.html
+++ b/gionee/demo/lazyload/lazyload.html
@@ -39,9 +39,14 @@ window.onresize = function(){
 };
 var oImg = document.getElementsByTagName("img");
 for(var i=0;i<oImg.length;i++){
-	oImg[i].src = oImg[i].dataset.src;
-	oImg[i].removeAttribute("data-src");
-
+	(function(i){
+		var aImg = new Image();
+		aImg.src = oImg[i].dataset.src;
+		aImg.onload = function(){
+			oImg[i].src = oImg[i].dataset.src;
+			oImg[i].removeAttribute("data-src");
+		};	
+	})(i);
 };
 </script>
 </body>
