--- a/gionee/demo/lazyload/lazyload.html
+++ b/gionee/demo/lazyload/lazyload.html
@@ -27,7 +27,7 @@ img:before{ content:""; width:100%; height:100%; display:inline-block; position:
   /* display: none; */
 }
 .pace .pace-progress {
-  background: #1ab394;
+  background: #f00;
   position: fixed;
   z-index: 2002;
   top: 0;
