--- a/gionee/demo/lazyload/lazyload.html
+++ b/gionee/demo/lazyload/lazyload.html
@@ -48,6 +48,9 @@ img:before{ content:""; width:100%; height:100%; display:inline-block; position:
     <img data-width="1440" data-height="2560" data-src="http://t-navadm.gionee.com/img/upload/lockimage/detailpage/20160706/344/14677846257841.jpg" src="">
 </div>
 <script>
+var oImg = document.getElementsByTagName("img");
+var oH = document.body.clientHeight || document.documentElement.clientHeight;
+var oS = document.body.scrollTop || document.documentElement.scrollTop;
 setImageWidth();
 function setImageWidth(){
 	var oImg = document.getElementsByTagName("img");
@@ -61,16 +64,31 @@ function setImageWidth(){
 window.onresize = function(){
 	setImageWidth();
 };
-var oImg = document.getElementsByTagName("img");
-for(var i=0;i<oImg.length;i++){
-	(function(i){
-		var aImg = new Image();
-		aImg.src = oImg[i].dataset.src;
-		aImg.onload = function(){
-			oImg[i].src = oImg[i].dataset.src;
-			oImg[i].removeAttribute("data-src");
-		};	
-	})(i);
+
+window.onscroll = function(){
+	lazyLoad();
+};
+
+lazyLoad();
+
+function lazyLoad(){
+	for(var i=0;i<oImg.length;i++){
+		(function(i){
+			if( ((oH + oS) > oImg[i].getBoundingClientRect().top) && !oImg[i].isLoad ){
+				oImg[i].isLoad = true;
+				var aImg = new Image();
+				if(oImg[i].dataset){
+					aImg.src = oImg[i].dataset.src;
+				}else{
+					aImg.src = oImg[i].getAttribute("data-src");
+				};
+				aImg.onload = function(){
+					oImg[i].src = oImg[i].dataset.src;
+					oImg[i].removeAttribute("data-src");
+				};
+			};
+		})(i);
+	};	
 };
 </script>
 </body>
