--- a/gionee/demo/lazyload/lazyload.html
+++ b/gionee/demo/lazyload/lazyload.html
@@ -6,7 +6,7 @@
 <meta name="format-detection" content="telephone=no, address=no, email=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <title>无标题文档</title>
 </head>
 <body>
