--- a/gionee/htm/envelope/envelope.html
+++ b/gionee/htm/envelope/envelope.html
@@ -20,6 +20,7 @@
 <div class="topWrap">
 	<img src="images/top.png" alt="顶部图片" width="100%" height="100%">
 </div>
+<div class="content pa l0 t0"></div>
   <!--<div class="box run run1" style="left:4em; top:5em;"></div>
   <div class="box run run2" style="left:10em; top:4em;"></div>
 --><!--<div class="box open"></div>-->
