--- a/gionee/htm/envelope/envelope.html
+++ b/gionee/htm/envelope/envelope.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" type="text/css" href="css/envelope.css">
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/envelope.js"></script>
+<script type="text/javascript" src="js/console.js"></script>
 </head>
 <body>
 <div class="bgWrap">
