--- a/gionee/demo/lazyload/lazyload.html
+++ b/gionee/demo/lazyload/lazyload.html
@@ -24,7 +24,8 @@ img:before{ content:""; width:100%; height:100%; display:inline-block; position:
 	<img data-width="777" data-height="495" data-src="http://d.gionee.com/nav/lockimage/detailpage/20160706/3250/1467797823326086755.jpg" src="">
 	<img data-width="754" data-height="473" data-src="http://d.gionee.com/nav/lockimage/detailpage/20160706/3250/1467797807708002833.jpg" src="" >
     <img data-width="990" data-height="563" data-src="http://d.gionee.com/nav/lockimage/detailpage/20160706/3250/1466761484189.jpg" src="" >
-    <img data-width="1440" data-height="2560" data-src="http://t-navadm.gionee.com/img/upload/lockimage/detailpage/20160706/344/14677846257841.jpg" src="">
+    <img data-width="1280" data-height="1024" data-src="http://d.gionee.com/nav/lockimage/detailpage/20160817/4403/1471427449190051667.webp" src="">
+    <img data-width="737" data-height="248" data-src="http://d.gionee.com/nav/lockimage/detailpage/20160817/4404/14706521066661.webp" src="">
 </div>
 <script type="text/javascript" src="pace.min.js"></script>
 <script>
