--- a/gionee/demo/audio/hello.html
+++ b/gionee/demo/audio/hello.html
@@ -16,7 +16,8 @@
 <script>
 document.onclick = function(){
 	document.getElementById("a").innerHTML = "222";
-	document.getElementById("audio").play();	
+	document.getElementById("audio").play();
+	document.getElementById("audio").volume = "0.2";	
 };
 </script>
 </body>
