--- a/gionee/demo/lazyload/lazyload.html
+++ b/gionee/demo/lazyload/lazyload.html
@@ -13,7 +13,7 @@
 ::-webkit-scrollbar {width:6px;border-radius:3px}
 ::-webkit-scrollbar-track { background-color: #F1F1F1;border-radius:3px;}
 ::-webkit-scrollbar-thumb { background-color: #c8c8c8;border-radius:3px;}
-body,html{ width:100%; height:100%;}
+body,html{ width:100%; height:100%; background:rgba(52,85,63,0.3)}
 body{ margin:0px; padding:0;}
 #div1{ margin:0 15px;}
 img{ max-width:100%; display:inline-block; position:relative;}
