--- a/gionee/demo/userInfo/userInfo.html
+++ b/gionee/demo/userInfo/userInfo.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>getUserInfo</title>
+<script src="http://wentao978.github.io/gionee/htm/envelope/js/console.js"></script>
 </head>
 <body>
 <div class="info"></div>
@@ -16,6 +17,8 @@ try{
 }catch(e){
 	userInfo = {};
 };
+
+console.log(userInfo);
 
 var oDiv = document.querySelector(".info");
 var str = "";
