--- a/gionee/demo/userInfo/userInfo.html
+++ b/gionee/demo/userInfo/userInfo.html
@@ -14,6 +14,8 @@ var s = getQueryString("s");
 var userInfo = null;
 try{
 	userInfo = JSON.parse(window.stroy.getUserInfo(u,s));
+	console.log(u);
+	console.log(s);
 }catch(e){
 	userInfo = {};
 };
