--- a/gionee/demo/userInfo/userInfo.html
+++ b/gionee/demo/userInfo/userInfo.html
@@ -15,12 +15,12 @@ var u = getQueryString("u") ? getQueryString("u") : "2041505121327397891";
 var s = getQueryString("s") ? getQueryString("s") : "A3DFED8FA563E14A19345CF9BB8606C6";
 document.querySelector(".sign").innerHTML = u +":"+ s;
 var userInfo = null;
-try{
+/*try{
 	userInfo = JSON.parse(window.stroy.getUserInfo(u,s));
 }catch(e){
 	userInfo = {};
-};
-
+};*/
+userInfo = JSON.parse(window.stroy.getUserInfo(u,s));
 console.log(u);
 console.log(s);
 console.log(userInfo);
