--- a/gionee/demo/userInfo/userInfo.html
+++ b/gionee/demo/userInfo/userInfo.html
@@ -43,6 +43,11 @@ function getQueryString(name){
 	}
 };
 
+
+var getFilterPackageInfos = null;
+getFilterPackageInfos = window.story.getFilterPackageInfos();
+console.log(getFilterPackageInfos);
+
 </script>
 </body>
 </html>
