--- a/gionee/demo/userInfo/userInfo.html
+++ b/gionee/demo/userInfo/userInfo.html
@@ -31,7 +31,7 @@ var userInfo = null;
 	userInfo = {};
 };*/
 console.log(userInfo);
-userInfo = JSON.parse(window.stroy.getUserInfo(u,s));
+userInfo = JSON.parse(window.story.getUserInfo(u,s));
 console.log(userInfo);
 
 var oDiv = document.querySelector(".info");
