--- a/gionee/demo/add/add2.html
+++ b/gionee/demo/add/add2.html
@@ -113,7 +113,7 @@ function addPv(flag){
 	}
 	var new_pv = {
 		url_pv:'', 	
-		url_pv_type:'',
+		url_pv_type:'1',
 		pv_ava_time:''
 	};
 	pv_check.push(new_pv);
