--- a/gionee/s/sort.html
+++ b/gionee/s/sort.html
@@ -7,8 +7,8 @@
 <style>
 div.wrap{ position:relative; width:100px; height:500px; border:1px dashed #ccc;}
 .t{ position:absolute; height:30px; line-height:30px; left:0; text-align:center; width:100%; transition:all .5s;}
-.t1{ top:0px;}
-.t2{ top:30px;}
+.t1{ top:0px; background:#096;}
+.t2{ top:30px; background:#C90;}
 </style>
 </head>
 <body>
