--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-hello wentao
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>面向对象的拖拽</title>
+</head>
+<link type="text/css" rel="stylesheet" href="css/drag.css" />
+<script src="js/drag.js"></script>
+<script>
+window.onload = function(){
+	var d1 = new drag('div1');
+	d1.init();
+	
+	var d2 = new drag('div2');
+	d2.init();	
+};
+</script>
+<body>
+<div id="div1"></div>
+<div id="div2"></div>
+</body>
+</html>
