--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>面向对象的拖拽</title>
+<title>Welcome</title>
 </head>
 <link type="text/css" rel="stylesheet" href="css/drag.css" />
 <script src="js/drag.js"></script>
