--- a/some/app.html
+++ b/some/app.html
@@ -15,10 +15,10 @@
 说明：通过h5可换醒app，如访问一个URL，点击按钮，打开应用，如果该应用APP没有安装，那么直接跳转到App Store的APP下载页面，通过点击的方式兼容性较好，如果安装了app，在手机各大浏览器(360浏览器 uc浏览器 搜狗浏览器 QQ浏览器 百度浏览器 )和QQ客户端中，能唤醒。微信 新浪微博客户端 腾讯微博客户端无法唤醒。
 -->
  
-<a href="zjmobile://platformapi/startapp" id="zjmobliestart" target="_blank">唤醒浙江移动手机营业厅！</a>
+<a id="zjmobliestart" target="_blank">唤醒浙江移动手机营业厅！</a>
  
 <script type="text/javascript"> 
-function applink(){  
+/*function applink(){  
     return function(){  
         var clickedAt = +new Date;  
          setTimeout(function(){
@@ -29,8 +29,19 @@ function applink(){
              }, 500);       
          }, 500)   
     };  
-}  
+} 
 document.getElementById("zjmobliestart").onclick = applink();  
+*/
+
+
+document.getElementById("zjmobliestart").onclick = function(){
+	window.location.href = "zjmobile://platformapi/startapp";	
+	
+	window.setTimeout(function(){
+		window.location.href = "http://www.baidu.com";		
+	},500);
+	
+};
 </script>   
 </body>
 </html>
