--- a/some/app.html
+++ b/some/app.html
@@ -39,6 +39,7 @@ document.getElementById("zjmobliestart").onclick = function(){
 	$.ajax({
 		url:"zjmobile://platformapi/startapp",
 		type:"get",
+		timeout:"500",
 		success: function(){
 			
 		},
