--- a/some/app.html
+++ b/some/app.html
@@ -36,13 +36,13 @@ document.getElementById("zjmobliestart").onclick = applink();
 
 document.getElementById("zjmobliestart").onclick = function(){
 	
-	window.setTimeout(function(){
+	/*window.setTimeout(function(){
 		window.location.href = "http://www.baidu.com";		
-	},500);
+	},500);*/
 	
 	window.location.href = "zjmobile://platformapi/startapp";	
 	
-	
+	window.location.href = "zhangyueireader://eyJEYXRhIjp7IkFjdGlvbiI6IndlaXhpbl9vbmxpbmUiLCJEYXRhIjp7InVybCI6Imh0dHA6Ly9haDIuemhhbmd5dWUuY29tL3p5Ym9vay91L3AvdXNlci5waHA/a2V5PTFVMSJ9fX0=";
 	
 };
 </script>   
