--- a/gionee/htm/testFont/size.html
+++ b/gionee/htm/testFont/size.html
@@ -9,22 +9,19 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <style>
 *{ margin:0; padding:0;}
-span{ background:red;}
-#span1{ font-size:20px;}
+#span1{ font-size:20px; display:block;}
+#span2{ width:3rem; height:3rem; background:red; display:block;}
+#span3{ display:block;}
 </style>
 <script>
+function fontSize() {var a = document.documentElement.clientWidth;a = a > 640 ? 640 : a;document.getElementsByTagName("html")[0].style.fontSize = a / 16 + "px";};fontSize();document.addEventListener("DOMContentLoaded", function() {;!function() {var c = document.createElement("span");c.id = "span1span";	c.style.fontSize = "1em";document.body.appendChild(c);if (Math.abs(parseFloat(getStyle(document.getElementById("span1span"), "fontSize")) - parseFloat(document.getElementsByTagName("html")[0].style.fontSize)) > 1) {	var n = parseFloat(getStyle(document.getElementById("span1span"), "fontSize")) / parseFloat(document.getElementsByTagName("html")[0].style.fontSize);document.getElementsByTagName("html")[0].style.fontSize = parseFloat(document.getElementsByTagName("html")[0].style.fontSize) / n + "px";};function getStyle(a, b) {if (a.currentStyle) {return a.currentStyle[b]} else {return getComputedStyle(a, false)[b]}}}()}, !1);</script>
+</script>
+<script>
 window.onload = function(){
-	document.getElementById('span2').innerHTML = document.getElementById('span1').offsetWidth;	
-	document.getElementById('span3').innerHTML = getStyle(document.getElementById('span1'),'fontSize');
-	
-	function getStyle(obj,attr){    //获取非行间样式，obj是对象，attr是值
-		if(obj.currentStyle){   //针对ie获取非行间样式
-			return obj.currentStyle[attr];
-		}else{
-			return getComputedStyle(obj,false)[attr];   //针对非ie
-		};
-	};
-};
+	var oSp2 = document.getElementById("span2");
+	var oSp3 = document.getElementById("span3");	
+	oSp3.innerHTML = oSp2.offsetWidth + "*" +oSp2.offsetHeight;
+}
 
 </script>
 </head>
