--- a/gionee/htm/testFont/size.html
+++ b/gionee/htm/testFont/size.html
@@ -14,26 +14,61 @@
 #span3,#span4{ display:block;}
 </style>
 <script>
-function fontSize() {var a = document.documentElement.clientWidth;a = a > 640 ? 640 : a;document.getElementsByTagName("html")[0].style.fontSize = a / 16 + "px";};fontSize();document.addEventListener("DOMContentLoaded", function() {;!function() {var c = document.createElement("span");c.id = "span1span";	c.style.fontSize = "1em";document.body.appendChild(c);if (Math.abs(parseFloat(getStyle(document.getElementById("span1span"), "fontSize")) - parseFloat(document.getElementsByTagName("html")[0].style.fontSize)) > 1) {	var n = parseFloat(getStyle(document.getElementById("span1span"), "fontSize")) / parseFloat(document.getElementsByTagName("html")[0].style.fontSize);document.getElementsByTagName("html")[0].style.fontSize = parseFloat(document.getElementsByTagName("html")[0].style.fontSize) / n + "px";};function getStyle(a, b) {if (a.currentStyle) {return a.currentStyle[b]} else {return getComputedStyle(a, false)[b]}}}()}, !1);</script>
+function fontSize() {
+	var a = document.documentElement.clientWidth;
+	a = a > 640 ? 640 : a;
+	document.getElementsByTagName("html")[0].style.fontSize = a / 16 + "px"
+}
+
+function getStyle(a, b) {
+	if (a.currentStyle) {
+		return a.currentStyle[b]
+	} else {
+		return getComputedStyle(a, false)[b]
+	}
+};
+	
+fontSize();
+
+document.addEventListener('DOMContentLoaded', function() {;
+	!
+	function() {
+		var c = document.createElement('span');
+		c.id = 'span1span';
+		c.style.fontSize = '1em';
+		document.body.appendChild(c);
+		
+		
+		var oSp4 = document.getElementById("span4");
+		oSp4.innerHTML = "原来的字体大小"+ parseFloat(getStyle(document.getElementById('span1span'), 'fontSize')) + "px";
+		
+		
+		if (Math.abs(parseFloat(getStyle(document.getElementById('span1span'), 'fontSize')) - parseFloat(document.getElementsByTagName('html')[0].style.fontSize)) > 1) {
+			var n = parseFloat(getStyle(document.getElementById('span1span'), 'fontSize')) / parseFloat(document.getElementsByTagName('html')[0].style.fontSize);
+			document.getElementsByTagName("html")[0].style.fontSize = parseFloat(document.getElementsByTagName('html')[0].style.fontSize) / n + "px"
+		};
+
+		function getStyle(a, b) {
+			if (a.currentStyle) {
+				return a.currentStyle[b]
+			} else {
+				return getComputedStyle(a, false)[b]
+			}
+		}
+	}()
+}, !1);
 </script>
 <script>
 window.onload = function(){
 	var oSp2 = document.getElementById("span2");
 	var oSp3 = document.getElementById("span3");
-	var oSp4 = document.getElementById("span4");
+	
 	var oSp5 = document.getElementById("span5");	
 	
-	oSp3.innerHTML = oSp2.offsetWidth + "*" +oSp2.offsetHeight;
-	oSp4.innerHTML = "原来的字体大小"+ parseFloat(getStyle(document.getElementById('span1span'), 'fontSize')) + "px";
+	oSp3.innerHTML = "红色方框："+oSp2.offsetWidth + "*" +oSp2.offsetHeight;	
 	oSp5.innerHTML = "调整后字体大小"+ parseFloat(document.getElementsByTagName('html')[0].style.fontSize) + "px";
 	
-	function getStyle(a, b) {
-		if (a.currentStyle) {
-			return a.currentStyle[b]
-		} else {
-			return getComputedStyle(a, false)[b]
-		}
-	};
+	
 	
 }
 
