--- a/gionee/demo/pimg/test/test.html
+++ b/gionee/demo/pimg/test/test.html
@@ -8,8 +8,14 @@
     <style type="text/css">
         .test1 {background-color: #ff0000}
         .test2 {background-color: #00ff00}
+		#out{ height:30px; border:1px solid #ccc; line-height:30px; text-align:center;}
+		#inner{ display:inline-block; height:100%; width:0; background:#f90;}
     </style>
 </head>
 <body>
+<div id="out">
+	<span id="inner"></span>
+    <span id="text"></span>
+</div>
 </body>
 </html>
