--- a/gionee/demo/pimg/test/test.html
+++ b/gionee/demo/pimg/test/test.html
@@ -9,7 +9,7 @@
         .test1 {background-color: #ff0000}
         .test2 {background-color: #00ff00}
 		#out{ height:30px; border:1px solid #ccc; line-height:30px; text-align:center;}
-		#inner{ display:inline-block; height:100%; width:0; background:#f90;}
+		#inner{ display:inline-block; height:100%; width:0; background:#f90; float:left;}
     </style>
 </head>
 <body>
