--- a/some/canvas/77.html
+++ b/some/canvas/77.html
@@ -10,10 +10,10 @@
 <style>
 body{ background:black; margin:0;}
 #c1{ background:white; background-image:url(boy.png); background-repeat:no-repeat; background-size:contain;}
-#num{ color:#fff;}
+#num,#timeout{ color:#fff;}
 </style>
 <script>
-//HTML5 canvas 的动画如何开发呢，这个能不能出些视频
+
 
 window.onload = function(){
 	var oC = document.getElementById('c1');
@@ -35,6 +35,16 @@ window.onload = function(){
 			window.setTimeout(callback, 1000/60);
 		};
 	})();
+	
+	Number.prototype.myToString = function(){
+		if(this < 1000){
+			if(this < 100){
+				return "00" + ":" + "0" + this.toString().substring(0,1);
+			}
+			return "00" + ":" + this.toString().substring(0,2);
+		}
+		return "0" + Math.floor(this/1000) + ":" + this.toString().substring(1,3);
+	}
 	
 	function show(){
 		
@@ -124,7 +134,7 @@ window.onload = function(){
 			oGC.fill();
 		}
 	}
-	show();
+	
 	
 	document.getElementById("btn1").onclick = function(){
 		var x = oC.width/2;
@@ -175,8 +185,38 @@ window.onload = function(){
 	document.getElementById("btn2").onclick = function(){
 		window.cancelAnimationFrame(stimer);	
 	}
+	
+	
+	
+	
+	
+	var timeDuration=10000;
+	var timeCount = 0;
+	var timer = null;
+	
+	var btn1 = document.getElementById("btn1");
+	var btn2 = document.getElementById("btn2");		
+	
+			
+	
+	
+	
+	
+	function go(){
+		timeCount++;
+		
+		if(timeCount > 500){
+			document.getElementById("timeout").innerHTML = "00:00"
+			return ;
+		}
+		
+		document.getElementById("timeout").innerHTML = (timeDuration - timeCount * 20).myToString();		
+	}
+	
+	
 	document.getElementById("btn3").onclick = function(){
-		stimer = requestAnimFrame(show);	
+		timer = setInterval(go,20);
+		show();	
 	}
 	
 };
@@ -189,6 +229,7 @@ window.onload = function(){
 <input type="button" value="增加" id="btn1">
 <input type="button" value="停止" id="btn2">
 <input type="button" value="开始" id="btn3">
+<span id="timeout">10.00</span> 
 <div id="num"></div>
 </body>
 </html>
