add progress images

--- a/some/canvas/77.html
+++ b/some/canvas/77.html
@@ -136,7 +136,7 @@ window.onload = function(){
 	}
 	
 	
-	document.getElementById("btn1").onclick = function(){
+	document.getElementById("btn1").onclick = oC.onclick = function(){
 		var x = oC.width/2;
 		var y = oC.height - 20;
 		var r = 10;
