--- a/some/time.html
+++ b/some/time.html
@@ -8,7 +8,12 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <style>
-#num{ width:200px; height:200px; border:1px dotted #aaa; margin-top:10px; background:rgba(0,0,0,.1); cursor:pointer;}
+#num{ width:100%; height:200px; border:1px dotted #aaa; margin-top:10px; background:rgba(0,0,0,.1); cursor:pointer;}
+.circle{ width:100px; height:100px; background:red; opacity:0.1; border-radius:50%; animation:move 0.6s infinite;}
+@keyframes move {
+	0%{ transform:translateY(0px) scale(1); opacity:0;}
+	100%{ transform:translateY(100px) scale(0.2); opacity:0.1;}	
+}
 </style>
 <script>
 
@@ -35,6 +40,8 @@ window.onload = function(){
 	var tcon = document.getElementById("timeout");
 	var tnum = document.getElementById("num");
 	var tbtn = document.getElementById("btn");	
+	var ts = document.getElementById("s");
+	var ti = 0;
 	
 	function go(){
 		timeCount++;
@@ -65,6 +72,15 @@ window.onload = function(){
 		}	
 	}
 	
+	
+	setInterval(function(){
+		ti++;
+		ts.innerHTML = ti;
+		if(ti >= 10){
+			ti = 0;
+		}	
+	},2000);
+	
 }
 
 </script>
@@ -76,6 +92,9 @@ window.onload = function(){
 <input type="button" value="暂停" id="btn2">
 <input type="button" value="0" id="btn">
 <div id="num"></div>
+<div id="s">0</div>
 <div>点击开始之后，点击灰色区域开始计数</div>
+<div class="circle"></div>
+
 </body>
 </html>
