--- a/some/time.html
+++ b/some/time.html
@@ -63,7 +63,9 @@ window.onload = function(){
 	
 	btn3.onclick = function(){
 		isPlaying = true;
-		timer = setInterval(go,40);
+		if(!isPlaying){
+			timer = setInterval(go,40);	
+		}
 	}
 	
 	tnum.onclick = function(){
