--- a/some/orderPlay/orderPlay.html
+++ b/some/orderPlay/orderPlay.html
@@ -16,7 +16,8 @@ var start = document.getElementById("start");
 var pause = document.getElementById("pause");
 var ul = document.getElementById("ul");
 var index = 0;
-var playList = ['apk/1.mp3','apk/1.m4a','apk/1.mp3','apk/2.m4a']
+var playList = ['apk/1.mp3','apk/1.m4a','apk/1.mp3','apk/2.m4a'];
+var isShowLoad = true;
 
 var html = '';
 if(playList.length){
@@ -28,6 +29,7 @@ ul.innerHTML = html;
 
 ul.onclick = function(e){
 	console.log(e.target.getAttribute('index'));
+	isShowLoad = true;
 	if(!audio.paused){
 		audio.pause();
 	}
@@ -62,11 +64,15 @@ audio.onended = function() {
 //每次切换src，audio绑定的事件都会执行，可以设置事件
 //progress事件 当浏览器正在取媒介数据时运行脚本
 audio.addEventListener("progress",function(){
-	console.log("正在加载数据,显示loading");
+	if(isShowLoad){
+		console.log("正在加载数据,显示loading");	
+	}
+	
 },false);
 
 //canplay	当媒介能够开始播放但可能因缓冲而需要停止时运行脚本
 audio.addEventListener("canplay",function(){
+	isShowLoad = false;
 	console.log("可以播放了,关闭loading");
 },false);
 </script>
