add domEvent demo

--- a/some/domEvent.html
+++ b/some/domEvent.html
@@ -99,11 +99,11 @@ document.write(demo.hasClass("a")+"<br/>");
 document.write(demo.hasClass("b")+"<br/>");
 document.write(demo.hasClass("bb")+"<br/>");
 
-//var p = $('p',true);
-//console.log(p.length);
-//Array.prototype.forEach.call(p,function(item){
-//	item.addClass('p')
-//});
+var p = $('p',true);
+console.log(p.length);
+Array.prototype.forEach.call(p,function(item){
+	item.addClass('p')
+});
 </script>
 </body>
 </html>
