add domEvent demo

--- a/some/domEvent.html
+++ b/some/domEvent.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>对dom事件的简单封装</title>
+<title>对dom方法的简单封装</title>
 </head>
 <body style="color:green; font-size:16px; transform:translate3d(0,-15px,0)">
 <div id="demo" class=""></div>
