--- a/some/hmusic5.html
+++ b/some/hmusic5.html
@@ -789,7 +789,7 @@ div#div1>img {
 					}catch (e) {
 						console.log(e);	
 					}
-					console.log("timeupdate");
+					//console.log("timeupdate");
 					lrcMove(audio.duration,audio.currentTime);
 					
 				}, false);
