--- a/some/orderPlay/orderPlay.html
+++ b/some/orderPlay/orderPlay.html
@@ -378,13 +378,21 @@ audio.onended = function() {
 //},false);
 
 //canplay	当媒介能够开始播放但可能因缓冲而需要停止时运行脚本 -- 就是需要缓冲
-audio.addEventListener("canplay",function(){
-	//if(isShowLoad){
-		loading.style.top = index * oneHeight + firstTop + 'px';
-		loading.addClass('show').removeClass('hide');
-		wave.addClass('hide').removeClass('paused').removeClass('show');
-		console.log("正在加载数据,显示loading");	
-	//}
+//waiting	当媒介已停止播放但打算继续播放时运行脚本
+audio.addEventListener("waiting",function(){ // 等待时显示loading
+	loading.style.top = index * oneHeight + firstTop + 'px';
+	loading.addClass('show').removeClass('hide');
+	wave.addClass('hide').removeClass('paused').removeClass('show');
+	console.log("正在加载数据,显示loading");	
+},false);
+
+audio.addEventListener("canplaythrough",function(){ // 可以播放时关闭loading
+
+	loading.style.top = index * oneHeight + firstTop + 'px';
+	loading.addClass('hide').removeClass('show');
+	wave.addClass('show').removeClass('paused').removeClass('hide');
+	console.log("可以播放了,关闭loading");
+	
 },false);
 
 //play	当媒介数据将要开始播放时运行脚本
