--- a/some/hmusic5.html
+++ b/some/hmusic5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>里客云音乐-告白气球-周杰伦</title>
+<title>金立音乐-告白气球-周杰伦</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta content="yes" name="apple-mobile-web-app-capable">
