--- a/some/move2.html
+++ b/some/move2.html
@@ -36,23 +36,25 @@ var d = outWidth;
 function move(){
 	window.cancelAnimationFrame(timer);
 	if(i>=inner.offsetWidth){
-		inner.style.transform = "translate3d(100px,0,0)";
+		//inner.style.transform = "translate3d(100px,0,0)";
 		d--;		
 		inner.style.transform = "translate3d("+d+"px,0,0)";
+		window.cancelAnimationFrame(timer);
 		timer = requestAnimationFrame(move);
 		if(d == 0){
 			console.log('到头了，停一会')
 			window.cancelAnimationFrame(timer);
 			setTimeout(function(){
 				window.cancelAnimationFrame(timer);
-				timer = requestAnimationFrame(move);	
+				timer = requestAnimationFrame(move);
+				i = 0;			
+				d = outWidth;	
 			},1000);
-			i = 0;			
-			d = outWidth;
 		}
 	}else{
 		i++;
 		inner.style.transform = "translate3d(-"+i+"px,0,0)";
+		window.cancelAnimationFrame(timer);
 		timer = requestAnimationFrame(move);	
 	}
 }
