--- a/some/orderPlay/orderPlay.html
+++ b/some/orderPlay/orderPlay.html
@@ -118,7 +118,7 @@ body { margin:0; padding:0; max-width: 640px;	height:100%; margin: 0 auto; posit
 
 
 div.wave { width:1.4rem; height:0.6rem; right:0.8rem; top:0.6rem; transform:rotateX(180deg); display:none;}
-div.wave span { display: inline-block; width: 2px; float:left; margin-bottom: 0; background-color: #f44778; margin-left:3px; border-radius: 40%;}
+div.wave span { display: inline-block; width: 2px; float:left; margin-bottom: 0; background-color: #f44778; margin-left:2px; border-radius: 2px;}
 
 .wave.paused .line1,.wave.paused .line2,.wave.paused .line3,.wave.paused .line4{
 	 -webkit-animation-play-state: paused;		
