--- a/some/hmusic5.html
+++ b/some/hmusic5.html
@@ -152,7 +152,7 @@ div#div1>img {
 <body>
 	<!--src="apk/1.m4a"  autoplay="autoplay" -->
 	<audio
-		
+		autoplay="autoplay"
         src="orderPlay/apk/1.m4a"
 		id="audio" ></audio>
 	<!--背景图片-->
@@ -174,7 +174,7 @@ div#div1>img {
 			</div> 
             <div class="play_pause_con" id="play_pause_con"> <!--播放/暂停按钮-->
 				<div id="ctrl">
-					<div id="play" class="play"></div>
+					<div id="play" class="pause"></div>
                 </div>    
             </div>
 		</div>
