--- a/some/getUserInfo.html
+++ b/some/getUserInfo.html
@@ -40,7 +40,9 @@ try{
 }catch(e){
 	
 }
-document.write(r);
+document.write('<br/>'+u);
+document.write('<br/>'+s);
+document.write('<br/>'+r);
 </script>
 </body>
 </html>
