--- a/some/getUserInfo.html
+++ b/some/getUserInfo.html
@@ -40,6 +40,7 @@ try{
 }catch(e){
 	
 }
+document.write('<br/>'+window.location);
 document.write('<br/>'+u);
 document.write('<br/>'+s);
 document.write('<br/>'+r);
