--- a/some/vue-tree/tree.html
+++ b/some/vue-tree/tree.html
@@ -180,6 +180,8 @@
 								}
 								if(!target[j].children.hasContain(targetList[i].id)){
 									target[j].children.push(targetList[i]);	
+									targetList.splice(i,1);
+									i--;
 								}
 								getChildren(target[j].children,targetList);
 							}
